  target cpu) which can be used in #ifs in .rc files.
- Add support for Win64 manifests and VC++ 8 automatic manifests (see the
  wxMSW faq for details).
- New TARGET_CPU=amd64 (or 'ia64') option for the makefile.vc files which
  puts 64-bit builds in their own directory and adds /machine:amd64 or ia64
  to the link command.

wxGTK:

- wxEVT_MENU_CLOSE and wxEVT_MENU_OPENED for popup menus are now generated
- Implemented wxCURSOR_BLANK support
- wxSlider generates all scroll events now and not only wxEVT_SCROLL_THUMBTRACK
- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.

wxMac:

- Fixed problem with clipboard support for custom data flavors.
- Fixed focus handling for generic controls in carbon-cfm.
- Fixed a printing crash bug, for example using File->Print and changing
  Popup from 'Copies & Pages' to e.g. 'Layout'.
- Improved support for help and application menu items.
- Added default implementations for wxTextCtrl::Replace and wxTextCtrl::Remove.
- Added support for 10.4 context menu.
- Added support for wxFRAME_EX_METAL and wxDIALOG_EX_METAL styles.
- Added wxNotebook::HitTest support.
- Corrected idle wake-up.
- Corrected wxExecute.
- Now makes use of full printer resolution.
- Corrected CGImage handling in wxBitmap.
- Now uses simple hide/how transition for top-level windows.
- Uses reasonable temporary path for wxFileName::CreateTempFileName.
- Added support for default key handling (escape, enter, command-period) even
  if there is no control on the frame or dialog that has the focus.
- Fixed joystick bugs including a link error and a crash if no joysticks
  were found.
- Removed an errorneous assertion from wxDir.
- Uses CoreFoundation based and thread-safe implementation for message boxes
  under Mach-O.